--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="./index_files/blocgrid.css">
 	<link rel="stylesheet" href="./index_files/page.css">
 	<link rel="stylesheet" href="./index_files/rgpd.css">
+	<link rel="manifest" href="./index_files/manifest.json">
 </head>
 <body>
 	<div id="wrapper">
@@ -254,6 +255,8 @@
 	<script src="./index_files/jquery.min.js"></script>
 	<script src="./index_files/custom.js"></script>
 	<script src="./index_files/rgpd.js"></script>
+	<script src="./index_files/install.js" defer></script>
+	<script src="./index_files/register-sw.js"></script>
 	
 </body>
 
